--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HelloWorld</string>
+    <string name="main_activity_btn">GO TO SUB</string>
+    <string name="sub_activity_btn">This is sub</string>
 </resources>
